force-app/main/default/objects/Product2/fields/NAT_Brand__c.field-meta.xml
<CustomField>
    <fullName>NAT_Brand__c</fullName>
    <description>Product Brand</description>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Essence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>