force-app/main/default/objects/Product2/fields/NAT_Category__c.field-meta.xml
<CustomField>
    <fullName>NAT_Category__c</fullName>
    <description>Product Category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>beauty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>