force-app/main/default/objects/Product2/fields/NAT_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>NAT_ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>NAT External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>