force-app/main/default/objects/Product2/fields/NAT_Price__c.field-meta.xml
<CustomField>
    <fullName>NAT_Price__c</fullName>
    <description>Product Price</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>