force-app/main/default/objects/Product2/fields/NAT_Stock__c.field-meta.xml
<CustomField>
    <fullName>NAT_Stock__c</fullName>
    <description>Number of units in stock</description>
    <label>Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>