force-app/main/default/objects/Product2/fields/NAT_ThumbnailURL__c.field-meta.xml
<CustomField>
    <fullName>NAT_ThumbnailURL__c</fullName>
    <label>Thumbnail URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>